V5.3.8 (July 4th, 2018):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • FIXED: Bug fixes and Code Cleanups

Automation App 5.3.5:
• FIXED: Converted degree symbols to unicode
• ADDED: Storage codebase is now part of Automations file
• FIXED: Code Cleanups and State Usage Reductions

V5.3.7 (May 31st, 2018):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • ADDED: New Storage App to help eliminate State Size issues (It's not storing any data yet)
 • ADDED: Maintenance Commands can now be run from the Diagnostics Web Interface (More Commands to Come)
 • UPDATED: Will remove un-needed or broken automations
 • FIXED: Converted degree symbols to unicode
 • FIXED: Bug fixes and Code Cleanups

Automation App 5.3.4:
• FIXED: Converted degree symbols to unicode
• FIXED: Code Cleanups and State Usage Reductions

V5.3.6 (May 8th, 2018):
▔▔▔▔▔▔▔▔▔▔▔
Manager App:
 • FIXED: State Cleanup optimizations to help prevent Max State Size errors
