@@ -30,33 +30,22 @@
             "oAuth": true,
             "version": "5.3.8",
             "appSettings": {
-                "clientId": "",
-                "clientSecret": "",
-                "devOpt": ""
+                "clientId": "blank",
+                "clientSecret": "blank",
+                "devOpt": "false"
             },
             "appUrl": "smartapps/tonesto7/nest-manager.src/nest-manager.groovy"
         },
         "children": [{
-                "name": "NST Automations",
-                "iconUrl": "https://raw.githubusercontent.com/tonesto7/nest-manager/master/Images/App/nst_automations_5.png",
-                "published": true,
-                "oAuth": false,
-                "version": "5.3.5",
-                "appSettings": {},
-                "appUrl": "smartapps/tonesto7/nst-automations.src/nst-automations.groovy",
-                "optional": false
-            },
-            {
-                "name": "NST Storage",
-                "iconUrl": "https://raw.githubusercontent.com/tonesto7/nest-manager/master/Images/App/nst_storage_5.png",
-                "published": true,
-                "oAuth": false,
-                "version": "5.4.0",
-                "appSettings": {},
-                "appUrl": "smartapps/tonesto7/nst-storage.src/nst-storage.groovy",
-                "optional": false
-            }
-        ]
+            "name": "NST Automations",
+            "iconUrl": "https://raw.githubusercontent.com/tonesto7/nest-manager/master/Images/App/nst_automations_5.png",
+            "published": true,
+            "oAuth": false,
+            "version": "5.3.5",
+            "appSettings": {},
+            "appUrl": "smartapps/tonesto7/nst-automations.src/nst-automations.groovy",
+            "optional": false
+        }]
     },
     "deviceHandlers": [{
             "name": "Nest Thermostat",
