@@ -1,6 +1,7 @@
 V5.3.8 (July 4th, 2018):
 ▔▔▔▔▔▔▔▔▔▔▔
 Manager App:
+ • FIXED: Storage App file no longer required
  • FIXED: Bug fixes and Code Cleanups
 
 Automation App 5.3.5:
